# humanity-deploy

./: LICENSE  README.md  pyproject.toml  streamlit_app.py
data/: some_results.csv
fastapi-backend/app/src/: main.py
