[tool.poetry]
name = "humanity-deploy"
version = "0.1.0"
description = ""
authors = ["avneetreen <avneet14027@iiitd.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.36.0"
fastapi = "^0.111.0"
sentencepiece = "0.1.97"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
